microc/tests/expected/err-doubledecl3.uc.out
../examples/err-doubledecl3.uc:[6:1]: semantic error: identifier 'f' already declared (1:1)
  f(){ // error: identifier already declared
  ^

1
